# -

./: AGENT_LOG.md  PLAN.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  ci.yml
作业/: Dockerfile  README.md  pyproject.toml
作业/codereflex/: __init__.py  agent.py  cli.py  config.py  credentials.py  models.py
作业/codereflex/feedback/: classifier.py  feedback_loop.py  validators.py
作业/codereflex/guardrail/: guardrail.py  hitl.py
作业/codereflex/llm/: client.py
作业/codereflex/memory/: decision_log.py  session.py
作业/codereflex/tools/: base.py  file_tools.py  shell_tool.py
作业/codereflex/web/: app.py
作业/codereflex/web/templates/: index.html
作业/demos/: mechanism_demo.py
作业/tests/: test_agent_loop.py  test_classifier.py  test_cli.py  test_config.py  test_credentials.py  test_feedback_loop.py  test_guardrail.py  test_hitl.py  test_llm_client.py  test_mechanism_demo.py  test_memory.py  test_models.py  test_tools.py  test_validators.py  test_web.py
作业/tests/fixtures/sample_project/: pyproject.toml
作业/tests/fixtures/sample_project/tests/: test_calc.py
