[project]
name = "codereflex"
version = "0.1.0"
description = "Feedback-loop-centric coding agent harness"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "keyring>=25",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.13"]
validators = ["pytest>=8", "ruff>=0.6", "mypy>=1.13"]

[project.scripts]
codereflex = "codereflex.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = ["fixtures"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"

[tool.setuptools]
packages = ["codereflex"]
